--- a/TechnoCAD.WPFTest/App.xaml
+++ b/TechnoCAD.WPFTest/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:TechnoCAD.WPFTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Padding" Value="5 2 5 2"/>
+            <Setter Property="Margin" Value="0 5"/>
+            
+        </Style>
     </Application.Resources>
 </Application>
