--- a/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
@@ -9,6 +9,12 @@
       Title="BuildingPage">
 
     <Grid Background="White">
+        <!--<DockPanel>
+            <TextBlock DockPanel.Dock="Top">Количество этажей</TextBlock>
+            <TextBox></TextBox>
+            <TextBlock DockPanel.Dock="Top">Адрес</TextBlock>
+        </DockPanel>-->
+            
         <TextBlock FontSize="24" HorizontalAlignment="Center"
                    VerticalAlignment="Center"> Building </TextBlock>
     </Grid>
