--- a/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
@@ -9,13 +9,26 @@
       Title="BuildingPage">
 
     <Grid Background="White">
-        <!--<DockPanel>
-            <TextBlock DockPanel.Dock="Top">Количество этажей</TextBlock>
-            <TextBox></TextBox>
-            <TextBlock DockPanel.Dock="Top">Адрес</TextBlock>
-        </DockPanel>-->
-            
-        <TextBlock FontSize="24" HorizontalAlignment="Center"
-                   VerticalAlignment="Center"> Building </TextBlock>
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="14"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Margin" Value="0 0 0 20"/>
+            </Style>
+            <Style TargetType="CheckBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="0 20 0 0"/>
+            </Style>
+        </Grid.Resources>
+        <StackPanel Orientation="Vertical"
+                    Margin="5">
+            <TextBlock>Количество этажей</TextBlock>
+            <TextBox Text="{Binding FloorCount}"/>
+            <TextBlock >Адрес</TextBlock>
+            <TextBox Text="{Binding Address}"/>
+            <CheckBox IsChecked="{Binding IsLiving}">Жилое помещение</CheckBox>
+        </StackPanel>
     </Grid>
 </Page>
