--- a/TechnoCAD.WPFTest/Views/Pages/ParcelPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/ParcelPage.xaml
@@ -8,10 +8,42 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ParcelPage">
 
-    <Grid>
-        <Grid Background="White">
-            <TextBlock FontSize="24" HorizontalAlignment="Center"
-                   VerticalAlignment="Center">Parcel</TextBlock>
-        </Grid>
+
+    <Grid Background="White">
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="14"/>
+
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Margin" Value="0 0 0 20"/>
+            </Style>
+            <Style TargetType="CheckBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="0 20 0 0"/>
+            </Style>
+        </Grid.Resources>
+        <DockPanel Margin="5">
+            <TextBlock DockPanel.Dock="Top">Кадастровый номер</TextBlock>
+            <TextBox Text="{Binding Number}" DockPanel.Dock="Top"/>
+            <TextBlock DockPanel.Dock="Top">Адрес</TextBlock>
+            <TextBox DockPanel.Dock="Top"
+                     Text="{Binding Location}"
+                     TextWrapping="Wrap"
+                     VerticalScrollBarVisibility="Visible"
+                     AcceptsReturn="True"/>
+        </DockPanel>
+        <!--<StackPanel Orientation="Vertical" Margin="5">
+            <TextBlock>Кадастровый номер</TextBlock>
+            <TextBox Text=""/>
+            <TextBlock >Адрес</TextBlock>
+            <Grid VerticalAlignment="Stretch">
+                <TextBox 
+                     TextWrapping="Wrap"
+                     VerticalScrollBarVisibility="Visible"
+                     AcceptsReturn="True"/>
+            </Grid>
+        </StackPanel>-->
     </Grid>
 </Page>
