--- a/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TechnoCAD.WPFTest.Views.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="BuildingPage">
+      d:DesignHeight="450" 
+      d:DesignWidth="800">
 
     <Grid Background="White">
         <Grid.Resources>
@@ -25,7 +25,7 @@
         <StackPanel Orientation="Vertical"
                     Margin="5">
             <TextBlock>Количество этажей</TextBlock>
-            <TextBox Text="{Binding FloorCount}"/>
+            <TextBox Text="{Binding FloorCount}" PreviewTextInput="TextBox_PreviewTextInput"/>
             <TextBlock >Адрес</TextBlock>
             <TextBox Text="{Binding Address}"/>
             <CheckBox IsChecked="{Binding IsLiving}">Жилое помещение</CheckBox>
