--- a/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/BuildingPage.xaml
@@ -25,9 +25,9 @@
         <StackPanel Orientation="Vertical"
                     Margin="5">
             <TextBlock>Количество этажей</TextBlock>
-            <TextBox Text="{Binding FloorCount}" PreviewTextInput="TextBox_PreviewTextInput"/>
+            <TextBox Text="{Binding FloorCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput"/>
             <TextBlock >Адрес</TextBlock>
-            <TextBox Text="{Binding Address}"/>
+            <TextBox Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <CheckBox IsChecked="{Binding IsLiving}">Жилое помещение</CheckBox>
         </StackPanel>
     </Grid>
