--- a/TechnoCAD.WPFTest/Views/Pages/ParcelPage.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/ParcelPage.xaml
@@ -5,15 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TechnoCAD.WPFTest.Views.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ParcelPage">
-
+      d:DesignHeight="450" 
+      d:DesignWidth="800">
 
     <Grid Background="White">
         <Grid.Resources>
             <Style TargetType="TextBlock">
                 <Setter Property="FontSize" Value="14"/>
-
             </Style>
             <Style TargetType="TextBox">
                 <Setter Property="FontSize" Value="16"/>
