--- a/TechnoCAD.WPFTest/Views/Pages/BuildingView.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/BuildingView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TechnoCAD.WPFTest.Views.Pages.ParcelPage"
+﻿<Page x:Class="TechnoCAD.WPFTest.Views.Pages.BuildingView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,15 +22,13 @@
                 <Setter Property="Margin" Value="0 20 0 0"/>
             </Style>
         </Grid.Resources>
-        <DockPanel Margin="5">
-            <TextBlock DockPanel.Dock="Top">Кадастровый номер</TextBlock>
-            <TextBox Text="{Binding Number}" DockPanel.Dock="Top"/>
-            <TextBlock DockPanel.Dock="Top">Адрес</TextBlock>
-            <TextBox DockPanel.Dock="Top"
-                     Text="{Binding Location}"
-                     TextWrapping="Wrap"
-                     VerticalScrollBarVisibility="Visible"
-                     AcceptsReturn="True"/>
-        </DockPanel>
+        <StackPanel Orientation="Vertical"
+                    Margin="5">
+            <TextBlock>Количество этажей</TextBlock>
+            <TextBox Text="{Binding FloorCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput"/>
+            <TextBlock >Адрес</TextBlock>
+            <TextBox Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <CheckBox IsChecked="{Binding IsLiving}">Жилое помещение</CheckBox>
+        </StackPanel>
     </Grid>
 </Page>
