--- a/TechnoCAD.WPFTest/Views/Pages/ParcelView.xaml
+++ b/TechnoCAD.WPFTest/Views/Pages/ParcelView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TechnoCAD.WPFTest.Views.Pages.BuildingPage"
+﻿<Page x:Class="TechnoCAD.WPFTest.Views.Pages.ParcelView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,13 +22,15 @@
                 <Setter Property="Margin" Value="0 20 0 0"/>
             </Style>
         </Grid.Resources>
-        <StackPanel Orientation="Vertical"
-                    Margin="5">
-            <TextBlock>Количество этажей</TextBlock>
-            <TextBox Text="{Binding FloorCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput"/>
-            <TextBlock >Адрес</TextBlock>
-            <TextBox Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <CheckBox IsChecked="{Binding IsLiving}">Жилое помещение</CheckBox>
-        </StackPanel>
+        <DockPanel Margin="5">
+            <TextBlock DockPanel.Dock="Top">Кадастровый номер</TextBlock>
+            <TextBox Text="{Binding Number}" DockPanel.Dock="Top"/>
+            <TextBlock DockPanel.Dock="Top">Адрес</TextBlock>
+            <TextBox DockPanel.Dock="Top"
+                     Text="{Binding Location}"
+                     TextWrapping="Wrap"
+                     VerticalScrollBarVisibility="Visible"
+                     AcceptsReturn="True"/>
+        </DockPanel>
     </Grid>
 </Page>
