Update ImageToSourceConverter.cs, ModelFactory.cs, and 19 more files...

--- a/TechnoCAD.WPFTest/Views/MainWindow.xaml
+++ b/TechnoCAD.WPFTest/Views/MainWindow.xaml
@@ -114,7 +114,7 @@
                       ItemsSource="{Binding AllertItems}"
                       Background="White">
                 <DataGrid.Columns>
-                    <DataGridTemplateColumn Header="pic" Width="auto">
+                    <DataGridTemplateColumn Width="auto">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Image Source="pack://application:,,,/Assets\wrong.png"/>
